# justo-estrategia-pricing-fds

./: .env.example  README.md  main.py  pyproject.toml  run_dashboard.sh  run_estrategias.py  run_postmortem.py
backend/: main.py
backend/api/: deps.py  main.py  routes.py  serialization.py
backend/pricing/: catalog.py  elasticity.py  postmortem.py  rotacion.py  snowflake_conn.py  strategy.py
data/inputs/: Descuentos comerciales.xlsx  oportunidad.xlsx  oportunidad_10jul_12jul_2026.xlsx
data/output/: estrategia_fds.xlsx  estrategia_fds_jul10_jul12_20260709.xlsx  postmortem_jul10_jul12_20260713_184217.html  postmortem_jul11_jul13_20260714_172804.html  postmortem_jul11_jul13_20260714_180519.html  postmortem_jul11_jul13_20260714_181544.html  postmortem_jul11_jul13_20260714_184455.html
data/utils/: Pricing _ Induccion.pptx  VW_PRICING_DASHBOARD.txt  Weekly Pricing.pptx  analisis_estrategia_pricing_fds_jun2026.xlsx
docs/: diccionario_metricas_margen.csv  estrategia_fds_presentacion.pptx  guion_presentacion.md  plan_estrategia_10jul_12jul.md
docs/fichas_tecnicas/: ficha_tecnica_10jul_12jul.html  ficha_tecnica_postmortem_3jul_5jul.html
frontend/src/: App.css  App.tsx  api.ts  colors.ts  index.css  rollups.ts  storeNames.ts  types.ts
frontend/src/components/: CampaignSelector.tsx  CrossDimensionSection.tsx  DataTable.tsx  DescuentoPlataformaSegmentoTable.tsx  DimensionMetricsSection.tsx  EngancheTable.tsx  FilterBar.tsx  GroupedBarChart.tsx  HorizontalBarChart.tsx  KpiCards.tsx  (+9 more)
src/: Estrategia_Pricing_FDS_Julio.ipynb  exploration.ipynb  snowflake_conn.py
