[project]
name = "estrategia-pricing-fds"
version = "0.1.0"
description = "Estrategias para el fin de semana"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "snowflake-connector-python>=4.7.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
]


